feat(UI): User dashboard design UI for user dashboard work on tabs for other features such as user transactions and accounts point sign-in and sign-up pages to the user-dashboard.html page [Delivers #164742830]

--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -60,7 +60,7 @@
                   <div class="form-label"><label>Confirm password</label></div>
                   <input class="form-input" type="password" name="confirm-password" placeholder="enter password again">
                 </div>
-                <a href="profile.html"><button class="submit-btn" type="button" name="sign-up">Sign up</button></a>
+                <a href="user-dashboard.html"><button class="submit-btn" type="button" name="sign-up">Sign up</button></a>
               </form>
             </div>
           </section>
