--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -40,7 +40,7 @@
                   <div class="form-label"><label>Password</label></div>
                   <input class="form-input" type="password" name="password" placeholder="Enter your password">
                 </div>
-              <a href="#"><button class="submit-btn" type="button" name="sign-in">Sign in</button></a>
+              <a href="./user-dashboard.html"><button class="submit-btn" type="button" name="sign-in">Sign in</button></a>
               </form>
             </div>
           </section>
