feat(UI): User(Client) view transactions - work on transaction tab in user profile page - remove unnecessary font-awesome link in some pages [Delivers #164742949]

--- a/UI/index.html
+++ b/UI/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Kumar+One+Outline" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>banka</title>
   </head>
   <body>
@@ -38,7 +38,7 @@
               "off the counter" and right here on the internet for you.
             </p>
             <br>
-            <button id="start" onclick="location.href='sign-up.html'">get started <i class="fas fa-arrow-right"></i></button>
+            <button id="start" onclick="location.href='sign-up.html'">get started <i class="fa fa-long-arrow-right"></i></button>
         </div>
         <div class="body-image">
           <img src="img/banka.jpg" alt="placeholder">
