--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Kumar+One+Outline" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>banka</title>
   </head>
   <body>
@@ -58,8 +58,26 @@
         </div>
         
         <div id="transaction-tab" class="tabcontent">
-          <h3>Transactions</h3>
-          <p>Will be populated with transaction info soon.</p>
+          <div class="transaction-item">
+            <i class="fa fa-long-arrow-up debit"></i>
+            <span class="item-content">-NGN 4,000 | 7:15pm | 8-11-2011</span>
+          </div>
+          <div class="transaction-item">
+            <i class="fa fa-long-arrow-down credit"></i>
+            <span class="item-content">NGN 204,000 | 12:15pm | 3-09-2011</span>
+          </div>
+          <div class="transaction-item">
+            <i class="fa fa-long-arrow-down credit"></i>
+            <span class="item-content">NGN 12,000 | 11:45am | 22-07-2011</span>
+          </div>
+          <div class="transaction-item">
+            <i class="fa fa-long-arrow-up debit"></i>
+            <span class="item-content">-NGN 9,000 | 9:29am | 2-05-2011</span>
+          </div>
+          <div class="transaction-item">
+            <i class="fa fa-long-arrow-down credit"></i>
+            <span class="item-content">NGN 45,000 | 3:02pm | 28-12-2010</span>
+          </div>
         </div>
         
         <div id="account-tab" class="tabcontent">
