feat(UI): User create account - work on the accounts tab in user profile page - create js file to power modal for account creation [Delivers #164742610]

--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -81,8 +81,52 @@
         </div>
         
         <div id="account-tab" class="tabcontent">
-          <h3>Accounts</h3>
-          <p>Will be populated with acounts info soon.</p>
+          <div class="account-item">
+            <div class="acct">
+              <span class="item-label">Savings Account:</span>
+              <span class="item-content">0023521878</span>
+            </div>
+            <div class="acct bal">
+              <span class="item-label">Account Balance:</span>
+              <span class="item-content">NGN 125,000.47</span>
+            </div>
+          </div>
+          <div class="account-item">
+            <div class="acct">
+              <span class="item-label">Current Account:</span>
+              <span class="item-content">0485219648</span>
+            </div>
+            <div class="acct bal">
+              <span class="item-label">Account Balance:</span>
+              <span class="item-content">NGN 258,000.52</span>
+            </div>
+          </div>
+          <div class="create">
+            <button id="create">&plus;</button>
+          </div>
+        </div>
+      </div>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <form action="" method="">
+              <div class="form-segment">
+                <div class="form-label"><label>Email</label></div>
+                <input class="form-input" type="email" name="email" placeholder="Enter your email">
+              </div>
+              <div class="form-segment">
+                <div class="form-label"><label>Phone no.</label></div>
+                <input class="form-input" type="tel" name="phone" placeholder="Enter your phone number">
+              </div>
+              <div class="form-segment">
+                <div class="form-label"><label>Account type</label></div>
+                <select class="form-input">
+                  <option value="current">Current</option>
+                  <option value="savings">Savings</option>
+                </select> 
+              </div>
+              <button class="submit-btn">Create Account</button>
+            </form>
         </div>
       </div>
       <footer>
@@ -90,5 +134,6 @@
       </footer>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/createAccount.js"></script>
   </body>
 </html>
