feat(UI): Admin view all bank accounts - add button to admin page to lead to bank accounts page - add some css styling [Delivers #164742213]

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -36,13 +36,29 @@
           </div>
         </div>
         <div id="profile-tab" class="tabcontent">
-					<h3>Admin Profile</h3>
-					<p>Admin profile page will be populated with admin profile data shortly</p>
+          <div class="profile-item">
+            <span class="item-label">Designation:</span>
+            <span class="item-content">admin</span>
+          </div>
+          <div class="profile-item">
+            <span class="item-label">Email: </span>
+            <span class="item-content">kalu.mike@gmail.com</span>
+          </div>
+          <div class="profile-item">
+            <span class="item-label">Phone: </span>
+            <span class="item-content">08001234567</span>
+          </div>
+          <div class="profile-item">
+            <span class="item-label">Address:</span>
+            <span class="item-content">No.4, Orimolusi Cr. Amen Estate</span>
+          </div>
         </div>
         
         <div id="user-accounts-tab" class="tabcontent">
-					<h3>User accounts tab</h3>
-					<p>This tab will hold data from every user account. It will be populated with data shortly</p>
+          <div class="admin-item">
+            <span class="item-content"><button class="admin-btn" onclick="location.href='#'">Create Admin or Staff user Accounts</button></span>
+            <span class="item-content"><button class="admin-btn" onclick="location.href='accounts.html'">View all Bank Accounts</button></span>
+          </div>
         </div>
       </div>
       <footer>
