--- a/UI/admin.html
+++ b/UI/admin.html
@@ -56,7 +56,7 @@
         
         <div id="user-accounts-tab" class="tabcontent">
           <div class="admin-item">
-            <span class="item-content"><button class="admin-btn" onclick="location.href='#'">Create Admin or Staff user Accounts</button></span>
+            <span class="item-content"><button class="admin-btn" onclick="location.href='superuser.html'">Create Admin or Staff user Accounts</button></span>
             <span class="item-content"><button class="admin-btn" onclick="location.href='accounts.html'">View all Bank Accounts</button></span>
           </div>
         </div>
