feat(UI): Admin (de)activate user accounts - work on user-accounts.html page - write some javascript for admin to deactivate or activate user accounts - style page elements [Delivers #164852264]

--- a/UI/account-details.html
+++ b/UI/account-details.html
@@ -11,7 +11,7 @@
   <body>
     <div id="mySidebar" class="sidebar">
       <a class="nav-link" href="./index.html"><p>home</p></a>
-      <a class="nav-link" href="./account-details.html"><p>Dashboard</p></a>
+      <a class="nav-link" href="./admin.html"><p>Dashboard</p></a>
       <a class="nav-link" href="./accounts.html"><p>Accounts</p></a>
     </div>
     <div id="page">
