--- a/UI/admin.html
+++ b/UI/admin.html
@@ -58,6 +58,7 @@
           <div class="admin-item">
             <span class="item-content"><button class="admin-btn" onclick="location.href='superuser.html'">Create Admin or Staff user Accounts</button></span>
             <span class="item-content"><button class="admin-btn" onclick="location.href='accounts.html'">View all Bank Accounts</button></span>
+            <span class="item-content"><button class="admin-btn" onclick="location.href='user-accounts.html'">View all User Accounts</button></span>
           </div>
         </div>
       </div>
