feat(UI): Staff credit and debit accounts - work on transactions.html page - create a dashboard exclusive to staff users [Delivers #164741980]

--- a/UI/sign-up.html
+++ b/UI/sign-up.html
@@ -11,6 +11,7 @@
     <div id="mySidebar" class="sidebar">
       <a class="nav-link" href="./index.html"><p>home</p></a>
       <a class="nav-link" href="./sign-in.html"><p>sign in</p></a>
+      <a class="nav-link" href="./staff.html"><p>Staff</p></a>
       <a class="nav-link" href="./admin.html"><p>Admin</p></a>
     </div>
     <div id="page">
@@ -21,6 +22,7 @@
         <div class="header-links">
           <a class="nav-link" href="./index.html"><p>home</p></a>
           <a class="nav-link" href="./sign-in.html"><p>sign in</p></a>
+          <a class="nav-link" href="./staff.html"><p>Staff</p></a>
           <a class="nav-link" href="./admin.html"><p>Admin</p></a>
         </div>
         <div id="hamburger-menu">☰</div>
