--- a/UI/index.html
+++ b/UI/index.html
@@ -12,6 +12,7 @@
     <div id="mySidebar" class="sidebar">
       <a class="nav-link" href="./sign-up.html"><p>sign up</p></a>
       <a class="nav-link" href="./sign-in.html"><p>sign in</p></a>
+      <a class="nav-link" href="./staff.html"><p>Staff</p></a>
       <a class="nav-link" href="./admin.html"><p>Admin</p></a>
     </div>
     <div id="page">
@@ -22,6 +23,7 @@
         <div class="header-links">
           <a class="nav-link" href="./sign-up.html"><p>sign up</p></a>
           <a class="nav-link" href="./sign-in.html"><p>sign in</p></a>
+          <a class="nav-link" href="./staff.html"><p>Staff</p></a>
           <a class="nav-link" href="./admin.html"><p>Admin</p></a>
         </div>
         <div id="hamburger-menu">☰</div>
