--- a/UI/staff.html
+++ b/UI/staff.html
@@ -56,8 +56,7 @@
         
         <div id="user-accounts-tab" class="tabcontent">
           <div class="admin-item">
-            <span class="item-content"><button class="admin-btn" onclick="location.href='user-accounts.html'">View all User Accounts</button></span>
-            <span class="item-content"><button class="admin-btn" onclick="location.href='account-transactions.html'">Account Transactions</button></span>
+            <span class="item-content"><button class="admin-btn" onclick="location.href='account-transactions.html'">View all Bank Accounts</button></span>
           </div>
         </div>
       </div>
