chore(UI): implement cogrammer feedback [Delivers #165341611]

--- a/UI/index.html
+++ b/UI/index.html
@@ -32,7 +32,7 @@
         <div class="body-text">
             <h1>Welcome to BANKA</h1>
             <p>
-              Banka is an online platform for for quick and painless transactions.
+              Banka is an online platform for quick and painless transactions.
             </p>
             <p>
               Although we always love to see you around our premises, we also want to make
