chore(feedback): implement lfa feedback
- work on accounts page cards size and content to maximize the screen real estate
- add image to mobile view homepage
- update README.md with links to features stated and prune non implemented features from the list

[Delivers #165347914]

--- a/UI/accounts.html
+++ b/UI/accounts.html
@@ -28,7 +28,7 @@
         <div>
           <div class="accounts">
             <span class="balance">NGN 125,000.47</span>
-            <div class="accounts-flex">
+            <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
                 <span class="item-content">Mr. Kelechi M. Ngwobia</span>
@@ -39,15 +39,15 @@
                 <span class="item-label">Account Status:</span>
                 <span class="item-content active">Active</span>
               </div>
-              <div class="account-operations">
-                <button class="delete">Delete</button>
-              </div>
             </div>
-            <span><button class="admin-btn" onclick="location.href='account-details.html'">View Account Details</button></span>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
           </div>
           <div class="accounts">
             <span class="balance">NGN 425,000.54</span>
-            <div class="accounts-flex">
+            <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
                 <span class="item-content">Ms. Chinecherem M. Ndukwe</span>
@@ -58,15 +58,15 @@
                 <span class="item-label">Account Status:</span>
                 <span class="item-content active">Active</span>
               </div>
-              <div class="account-operations">
-                <button class="delete">Delete</button>
-              </div>
             </div>
-            <span><button class="admin-btn" onclick="location.href='account-details.html'">View Account Details</button></span>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
           </div>
           <div class="accounts">
             <span class="balance-dormant">NGN 55,000</span>
-            <div class="accounts-flex">
+            <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
                 <span class="item-content">Ms. Iyabo Adekunle</span>
@@ -77,15 +77,15 @@
                 <span class="item-label">Account Status:</span>
                 <span class="item-content dormant">Dormant</span>
               </div>
-              <div class="account-operations">
-                <button class="delete">Delete</button>
-              </div>
             </div>
-            <span><button class="admin-btn" onclick="location.href='account-details.html'">View Account Details</button></span>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
           </div>
           <div class="accounts">
             <span class="balance">NGN 2,350,000.57</span>
-            <div class="accounts-flex">
+            <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
                 <span class="item-content">Mr. Abdulmalik Abdulfatai</span>
@@ -96,15 +96,15 @@
                 <span class="item-label">Account Status:</span>
                 <span class="item-content active">Active</span>
               </div>
-              <div class="account-operations">
-                <button class="delete">Delete</button>
-              </div>
             </div>
-            <span><button class="admin-btn" onclick="location.href='account-details.html'">View Account Details</button></span>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
           </div>
           <div class="accounts">
             <span class="balance-dormant">NGN 0.62</span>
-            <div class="accounts-flex">
+            <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
                 <span class="item-content">Mr. James Ogheneorieva</span>
@@ -115,11 +115,68 @@
                 <span class="item-label">Account Status:</span>
                 <span class="item-content dormant">Dormant</span>
               </div>
-              <div class="account-operations">
-                <button class="delete">Delete</button>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance-dormant">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
               </div>
             </div>
-            <span><button class="admin-btn" onclick="location.href='account-details.html'">View Account Details</button></span>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance-dormant">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 2,350,000.57</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. Abdulmalik Abdulfatai</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">7855830254</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content active">Active</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
           </div>
         </div>
       </div>
