--- a/UI/index.html
+++ b/UI/index.html
@@ -29,6 +29,9 @@
         <div id="hamburger-menu">☰</div>
       </header>
       <div class="page-body landing-page">
+        <div class="body-image">
+          <img src="img/banka.jpg" alt="currencies">
+        </div>
         <div class="body-text">
             <h1>Welcome to BANKA</h1>
             <p>
@@ -41,9 +44,6 @@
             </p>
             <br>
             <button id="start" onclick="location.href='sign-up.html'">get started <i class="fa fa-long-arrow-right"></i></button>
-        </div>
-        <div class="body-image">
-          <img src="img/banka.jpg" alt="placeholder">
         </div>
       </div>
       <footer>
