--- a/UI/user-accounts.html
+++ b/UI/user-accounts.html
@@ -26,7 +26,7 @@
       </header>
       <div class="page-body">
         <div>
-          <div class="accounts">
+          <div class="user-accounts">
             <div class="accounts-flex">
               <div class="account-details">
                 <span class="item-label">Name:</span>
@@ -47,7 +47,7 @@
               </div>
             </div>
           </div>
-          <div class="accounts">
+          <div class="user-accounts">
             <div class="accounts-flex">
               <div class="account-details">
                 <span class="item-label">Name:</span>
@@ -68,7 +68,7 @@
               </div>
             </div>
           </div>
-          <div class="accounts">
+          <div class="user-accounts">
             <div class="accounts-flex">
               <div class="account-details">
                 <span class="item-label">Name:</span>
@@ -89,7 +89,7 @@
               </div>
             </div>
           </div>
-          <div class="accounts">
+          <div class="user-accounts">
             <div class="accounts-flex">
               <div class="account-details">
                 <span class="item-label">Name:</span>
@@ -110,7 +110,7 @@
               </div>
             </div>
           </div>
-          <div class="accounts">
+          <div class="user-accounts">
             <div class="accounts-flex">
               <div class="account-details">
                 <span class="item-label">Name:</span>
@@ -119,6 +119,27 @@
                 <span class="item-content">07060587443</span>
                 <span class="item-label">Email:</span>
                 <span class="item-content">james_chase@gmail.com</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant status">Dormant</span>
+              </div>
+              <div class="account-operations">
+                <span class="item-label">Toggle Account Status</span>
+                <label class="switch">
+                  <input class="form-input" type="checkbox" name="status">
+                  <span class="slider round"></span>
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="user-accounts">
+            <div class="accounts-flex">
+              <div class="account-details">
+                <span class="item-label">Name:</span>
+                <span class="item-content">Mr. John Ubioma</span>
+                <span class="item-label">Phone Number:</span>
+                <span class="item-content">08112454569</span>
+                <span class="item-label">Email:</span>
+                <span class="item-content">Jbioma@mailact.com</span>
                 <span class="item-label">Account Status:</span>
                 <span class="item-content dormant status">Dormant</span>
               </div>
