bug(UI): fix ui bugs
- fix nav menu overflowing on large screen
- fix nav font to be sentence case

[Delivers #165380067]

--- a/UI/account-details.html
+++ b/UI/account-details.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a class="nav-link" href="./index.html"><p>home</p></a>
       <a class="nav-link" href="./admin.html"><p>Dashboard</p></a>
       <a class="nav-link" href="./accounts.html"><p>Accounts</p></a>
