--- a/UI/index.html
+++ b/UI/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a class="nav-link" href="./sign-up.html"><p>sign up</p></a>
       <a class="nav-link" href="./sign-in.html"><p>sign in</p></a>
       <a class="nav-link" href="./staff.html"><p>Staff</p></a>
