--- a/UI/sign-in.html
+++ b/UI/sign-in.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <a class="nav-link" href="./index.html"><p>home</p></a>
       <a class="nav-link" href="./sign-up.html"><p>sign up</p></a>
       <a class="nav-link" href="./staff.html"><p>Staff</p></a>
