fix(UI): fix ui buttons
- fix sign up and sign in buttons with small text
- revert signup and sign in links to align with the others

[Delivers #165380067]

--- a/UI/index.html
+++ b/UI/index.html
@@ -22,8 +22,8 @@
           <p class="logo">b<span>ank</span>a</p>
         </div>
         <div class="header-links">
-          <a class="nav-link a-nav" href="./sign-up.html"><p>sign up</p></a>
-          <a class="nav-link a-nav" href="./sign-in.html"><p>sign in</p></a>
+          <a class="nav-link" href="./sign-up.html"><p>sign up</p></a>
+          <a class="nav-link" href="./sign-in.html"><p>sign in</p></a>
           <a class="nav-link" href="./staff.html"><p>Staff</p></a>
           <a class="nav-link" href="./admin.html"><p>Admin</p></a>
         </div>
