chore(feedback): implement frontend feedback
- Make provision for editable user profile
- Make changes on wrong form labels
- set a minimum limit for transaction amount

[Delivers #165648582]

--- a/UI/account-transactions.html
+++ b/UI/account-transactions.html
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 55,000</span>
+            <span class="balance">NGN 55,000</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 0.62</span>
+            <span class="balance">NGN 0.62</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 25,032.72</span>
+            <span class="balance">NGN 25,032.72</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 0.62</span>
+            <span class="balance">NGN 0.62</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -162,7 +162,159 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 0.62</span>
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -187,12 +339,12 @@
           <span class="close">&times;</span>
           <form action="" method="">
               <div class="form-segment">
-                <div class="form-label"><label>Amount</label></div>
+                <div class="form-label"><label>Account Number</label></div>
                 <input class="form-input" type="number" name="account-number" placeholder="Enter Account Number">
               </div>
             <div class="form-segment">
               <div class="form-label"><label>Amount</label></div>
-              <input class="form-input" type="number" name="amount" placeholder="Enter Transaction Amount">
+              <input class="form-input" type="number" name="amount" min="500" value="500" placeholder="Enter Transaction Amount">
             </div>
             <div class="form-segment">
               <div class="form-label"><label>Transaction type</label></div>
