--- a/UI/superuser.html
+++ b/UI/superuser.html
@@ -26,7 +26,7 @@
       </header>
       <div class="page-body">
           <section class="box">
-              <h2 class="form-title" >Sign up</h2>
+              <h2 class="form-title">Create Admin/Staff</h2>
             <br/> <br/>
             <div class="log-in">
               <form action="" method="">
@@ -39,16 +39,8 @@
                   <input class="form-input" type="text" name="lastname" placeholder="enter your Lastname">
                 </div>
                 <div class="form-segment">
-                  <div class="form-label"><label>Other name</label></div>
-                  <input class="form-input" type="text" name="othername" placeholder="enter your othername">
-                </div>
-                <div class="form-segment">
                   <div class="form-label"><label>Email</label></div>
                   <input class="form-input" type="email" name="email" placeholder="enter your email">
-                </div>
-                <div class="form-segment">
-                  <div class="form-label"><label>Phone Number</label></div>
-                  <input class="form-input" type="tel" name="phone-number" placeholder="enter your phonenumber">
                 </div>
                 <div class="form-segment">
                   <div class="form-label"><label>Password</label></div>
