--- a/UI/accounts.html
+++ b/UI/accounts.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 55,000</span>
+            <span class="balance">NGN 55,000</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 0.62</span>
+            <span class="balance">NGN 0.62</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -123,7 +123,7 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 0.62</span>
+            <span class="balance">NGN 0.62</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
@@ -142,7 +142,159 @@
             </div>
           </div>
           <div class="accounts">
-            <span class="balance-dormant">NGN 0.62</span>
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 2,350,000.57</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. Abdulmalik Abdulfatai</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">7855830254</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content active">Active</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 55,000</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Ms. Iyabo Adekunle</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0524796425</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Current</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 2,350,000.57</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. Abdulmalik Abdulfatai</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">7855830254</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content active">Active</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 55,000</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Ms. Iyabo Adekunle</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0524796425</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Current</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 2,350,000.57</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. Abdulmalik Abdulfatai</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">7855830254</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content active">Active</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
+            <div class="">
+              <div class="account-details">
+                <span class="item-label">Account Holder:</span>
+                <span class="item-content">Mr. James Ogheneorieva</span>
+                <span class="item-label">Account Number:</span>
+                <span class="item-content">0745823615</span>
+                <span class="item-label">Account Type:</span>
+                <span class="item-content">Savings</span>
+                <span class="item-label">Account Status:</span>
+                <span class="item-content dormant">Dormant</span>
+              </div>
+            </div>
+            <div class="account-operations">
+              <button class="delete">Delete</button>
+              <button class="details" onclick="location.href='account-details.html'">Details</button>
+            </div>
+          </div>
+          <div class="accounts">
+            <span class="balance">NGN 0.62</span>
             <div class="">
               <div class="account-details">
                 <span class="item-label">Account Holder:</span>
