--- a/UI/user-dashboard.html
+++ b/UI/user-dashboard.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Abel|Kumar+One+Outline" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <title>banka</title>
   </head>
   <body>
@@ -51,6 +52,9 @@
           <div class="profile-item">
             <span class="item-label">Address:</span>
             <span class="item-content">Old leg. qtrs. Jos, Plateau State</span>
+          </div>
+          <div class="edit">
+            <button id="edit"><i class="fas fa-user-edit"></i></button>
           </div>
         </div>
         
@@ -126,11 +130,35 @@
             </form>
         </div>
       </div>
+      <div id="myModal1" class="modal1">
+          <div class="modal-content">
+            <form action="" method="">
+                <div class="form-segment">
+                  <div class="form-label"><label>Edit Profile</label></div>
+                  <input class="form-input" type="file" name="profile-img" accept="image/x-png,image/gif,image/jpeg">
+                </div>
+                <div class="form-segment">
+                  <div class="form-label"><label>Phone no.</label></div>
+                  <input class="form-input" type="tel" name="phone" placeholder="Enter your phone number">
+                </div>
+                <div class="form-segment">
+                  <div class="form-label"><label>BVN</label></div>
+                  <input class="form-input" type="number" name="bvn" placeholder="Enter your BVN">
+                </div>
+                <div class="form-segment">
+                  <div class="form-label"><label>Address</label></div>
+                  <input class="form-input" type="text" name="address" placeholder="Enter your address">
+                </div>
+                <button class="submit-btn">Save Changes</button>
+              </form>
+          </div>
+        </div>
       <footer>
         <p>Copyright &copy; banka 2019</p>
       </footer>
     </div>
     <script src="js/main.js"></script>
     <script src="js/createAccount.js"></script>
+    <script src="js/editProfile.js"></script>
   </body>
 </html>
